# serializer version: 1
# name: test_acme_client_create_client_jws_errors[json_error0-True]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for acme_directory: https://acme.example.com/directory
  [WARNING] hass_nabucasa.remote: Recreating the ACME account for test.dui.nabu.casa: JWS verification failed: urn:ietf:params:acme:error:malformed :: The request message was malformed :: JWS verification error
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error1-True]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for acme_directory: https://acme.example.com/directory
  [WARNING] hass_nabucasa.remote: Recreating the ACME account for test.dui.nabu.casa: JWS verification failed: urn:ietf:params:acme:error:malformed :: The request message was malformed :: Unable to validate JWS
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error2-True]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for acme_directory: https://acme.example.com/directory
  [WARNING] hass_nabucasa.remote: Recreating the ACME account for test.dui.nabu.casa: JWS verification failed: urn:ietf:params:acme:error:malformed :: The request message was malformed :: Unable to validate JWS :: Invalid Content-Type header on
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error3-True]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for acme_directory: https://acme.example.com/directory
  [WARNING] hass_nabucasa.remote: Recreating the ACME account for test.dui.nabu.casa: ACME account is deactivated: urn:ietf:params:acme:error:unauthorized :: The client lacks sufficient authorization :: Unable to validate JWS :: Account is not valid, has status "deactivated"
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error4-False]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for acme_directory: https://acme.example.com/directory
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't connect to ACME server: urn:ietf:params:acme:error:unauthorized :: The client lacks sufficient authorization :: Some other unauthorized reason
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error5-False]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for acme_directory: https://acme.example.com/directory
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't connect to ACME server: urn:ietf:params:acme:error:malformed :: The request message was malformed :: Some other malformed reason
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error6-False]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for acme_directory: https://acme.example.com/directory
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't connect to ACME server: about:blank :: Boom
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error0-True]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Recreating the ACME account for test.dui.nabu.casa: JWS verification failed: urn:ietf:params:acme:error:malformed :: The request message was malformed :: JWS verification error
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error1-True]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Recreating the ACME account for test.dui.nabu.casa: JWS verification failed: urn:ietf:params:acme:error:malformed :: The request message was malformed :: Unable to validate JWS
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error2-True]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Recreating the ACME account for test.dui.nabu.casa: JWS verification failed: urn:ietf:params:acme:error:malformed :: The request message was malformed :: Unable to validate JWS :: Invalid Content-Type header on
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error3-True]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Recreating the ACME account for test.dui.nabu.casa: ACME account is deactivated: urn:ietf:params:acme:error:unauthorized :: The client lacks sufficient authorization :: Unable to validate JWS :: Account is not valid, has status "deactivated"
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error4-False]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't order a new ACME challenge: urn:ietf:params:acme:error:unauthorized :: The client lacks sufficient authorization :: Some other unauthorized reason
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error5-False]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't order a new ACME challenge: urn:ietf:params:acme:error:malformed :: The request message was malformed :: Some other malformed reason
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error6-False]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't order a new ACME challenge: about:blank :: Boom
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_certificate_network_error_handling[RequestException-Connection timeout]
  '''
  [DEBUG] hass_nabucasa.remote: Initializing backend
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: no_certificate
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't order a new ACME challenge: Connection timeout
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_certificate_network_error_handling[gaierror-DNS resolution failed]
  '''
  [DEBUG] hass_nabucasa.remote: Initializing backend
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: no_certificate
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't order a new ACME challenge: DNS resolution failed
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_context_error_handling[file_not_found]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Certificate status: ssl_context_error
  '''
# ---
# name: test_context_error_handling[ssl_key_values_mismatch]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Certificate status: ssl_context_error
  '''
# ---
# name: test_context_error_handling[ssl_other]
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Certificate status: ssl_context_error
  '''
# ---
# name: test_load_connect_forbidden
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Initializing SniTun
  [DEBUG] hass_nabucasa.remote: Starting SniTun
  [DEBUG] hass_nabucasa.remote: Connecting remote backend: True
  [DEBUG] hass_nabucasa.remote: Refresh snitun token
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_snitun_token: https://api.example.com/instance/snitun_token
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/snitun_token
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/snitun_token (403) lorem_ipsum
  [ERROR] hass_nabucasa.remote: Remote connection is not allowed lorem_ipsum
  '''
# ---
# name: test_load_connect_insecure
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_ping_targets: https://api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Sending GET request to api.example.com/instance/remote_ping_targets
  [DEBUG] hass_nabucasa.api: Response for get from api.example.com/instance/remote_ping_targets (200) 
  [DEBUG] hass_nabucasa.remote: No ping targets returned, skipping ping
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_register: https://api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Initializing SniTun
  [DEBUG] hass_nabucasa.remote: Starting SniTun
  [DEBUG] hass_nabucasa.remote: Connecting remote backend: True
  [DEBUG] hass_nabucasa.remote: Refresh snitun token
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for remote_access_snitun_token: https://api.example.com/instance/snitun_token
  [DEBUG] hass_nabucasa.api: Sending POST request to api.example.com/instance/snitun_token
  [DEBUG] hass_nabucasa.api: Response for post from api.example.com/instance/snitun_token (409) 
  '''
# ---
# name: test_recreating_old_certificate_with_bad_dns_config
  list([
    dict({
      'identifier': 'reset_bad_custom_domain_configuration_1538740800',
      'placeholders': dict({
        'custom_domains': 'example.com',
      }),
      'severity': 'error',
      'translation_key': 'reset_bad_custom_domain_configuration',
    }),
  ])
# ---
# name: test_regeneration_without_warning_for_good_dns_config
  list([
  ])
# ---
# name: test_warn_about_bad_dns_config_for_old_certificate[exception0]
  list([
    dict({
      'identifier': 'warn_bad_custom_domain_configuration_1539345600',
      'placeholders': dict({
        'custom_domains': 'example.com',
      }),
      'severity': 'warning',
      'translation_key': 'warn_bad_custom_domain_configuration',
    }),
  ])
# ---
# name: test_warn_about_bad_dns_config_for_old_certificate[exception1]
  list([
    dict({
      'identifier': 'warn_bad_custom_domain_configuration_1539345600',
      'placeholders': dict({
        'custom_domains': 'example.com',
      }),
      'severity': 'warning',
      'translation_key': 'warn_bad_custom_domain_configuration',
    }),
  ])
# ---
# name: test_warn_about_bad_dns_config_for_old_certificate[exception2]
  list([
    dict({
      'identifier': 'warn_bad_custom_domain_configuration_1539345600',
      'placeholders': dict({
        'custom_domains': 'example.com',
      }),
      'severity': 'warning',
      'translation_key': 'warn_bad_custom_domain_configuration',
    }),
  ])
# ---
